# libjpeg-turbo

./: CMakeLists.txt  cjpeg.c  jcdctmgr.c  jdct.h  jfdctflt.c  jpeglib.h  xla_none.c
sharedlib/: CMakeLists.txt
xla/: CMakeLists.txt  Inference.c  Inference.h  dctunittest.c  jfdctxla.c  pbgenerator.py
